--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "breaking-bad-react-app",
+  "name": "3790-final-project",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
