--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "netlify-cli": "^6.13.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-lazyload": "^3.2.0",
     "react-netlify-identity-gotrue": "^0.3.5",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
