--- a/public/manifest.json
+++ b/public/manifest.json
@@ -5,16 +5,16 @@
     {
       "src": "breakingbad.jpeg",
       "sizes": "64x64 32x32 24x24 16x16",
-      "type": "image/x-icon"
+      "type": "image/jpeg"
     },
     {
       "src": "breakingbad.jpeg",
-      "type": "image/png",
+      "type": "image/jpeg",
       "sizes": "192x192"
     },
     {
       "src": "breakingbad.jpeg",
-      "type": "image/png",
+      "type": "image/jpeg",
       "sizes": "512x512"
     }
   ],
